@@ -2,15 +2,22 @@ package pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.p
 
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
+import pt.sensae.services.smart.irrigation.backend.domain.model.DomainId;
+import pt.sensae.services.smart.irrigation.backend.domain.model.business.device.ledger.Ownership;
 import pt.sensae.services.smart.irrigation.backend.domain.model.business.garden.GardenRepository;
 import pt.sensae.services.smart.irrigation.backend.domain.model.business.garden.GardeningArea;
 import pt.sensae.services.smart.irrigation.backend.domain.model.business.garden.GardeningAreaId;
 import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.mapper.gardeningArea.AreaBoundariesMapper;
 import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.mapper.gardeningArea.GardeningAreaMapper;
+import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.mapper.gardeningArea.GardeningAreaOwnerMapper;
+import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.model.gardeningArea.GardeningAreaOwnerPostgres;
 import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.repository.gradeningArea.AreaBoundariesRepositoryPostgres;
+import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.repository.gradeningArea.GardeningAreaOwnerRepositoryPostgres;
 import pt.sensae.services.smart.irrigation.backend.infrastructure.persistence.postgres.repository.gradeningArea.GardeningAreaRepositoryPostgres;
 
+import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
@@ -21,46 +28,71 @@ public class GardenRepositoryImpl implements GardenRepository {
     private final AreaBoundariesRepositoryPostgres areaRepository;
     private final GardeningAreaRepositoryPostgres gardeningAreaRepository;
 
-    public GardenRepositoryImpl(AreaBoundariesRepositoryPostgres areaRepository, GardeningAreaRepositoryPostgres gardeningAreaRepository) {
+    private final GardeningAreaOwnerRepositoryPostgres areaOwnerRepositoryPostgres;
+
+    public GardenRepositoryImpl(AreaBoundariesRepositoryPostgres areaRepository,
+                                GardeningAreaRepositoryPostgres gardeningAreaRepository,
+                                GardeningAreaOwnerRepositoryPostgres areaOwnerRepositoryPostgres) {
         this.areaRepository = areaRepository;
         this.gardeningAreaRepository = gardeningAreaRepository;
-    }
-
-    @Override
-    @Transactional("transactionManagerPostgres")
-    public Optional<GardeningArea> fetchById(GardeningAreaId id) {
-        var boundariesDao = areaRepository.findAllByAreaId(id.value().toString());
-
-        return gardeningAreaRepository.findByDeletedFalseAndAreaId(id.value().toString())
-                .map(dao -> GardeningAreaMapper.daoToModel(dao, AreaBoundariesMapper.daoToModel(boundariesDao)));
+        this.areaOwnerRepositoryPostgres = areaOwnerRepositoryPostgres;
     }
 
     @Override
     @Transactional("transactionManagerPostgres")
     public Stream<GardeningArea> fetchMultiple(Stream<GardeningAreaId> id) {
-        var ids = id.map(i -> i.value().toString()).toList();
+        var ids = id.map(i -> i.value().toString()).collect(Collectors.toSet());
         if (ids.isEmpty()) {
             return Stream.empty();
         }
+
+        var ownerAreas = areaOwnerRepositoryPostgres.findAllByAreaIdIn(ids)
+                .collect(Collectors.groupingBy(o -> o.areaId));
+
         var boundaries = areaRepository.findAllByAreaIdIn(ids)
                 .collect(Collectors.groupingBy(o -> o.areaId));
 
         var gardeningAreas = gardeningAreaRepository.findAllByDeletedFalseAndAreaIdIn(ids)
-                .map(dao -> GardeningAreaMapper.daoToModel(dao, AreaBoundariesMapper.daoToModel(boundaries.get(dao.areaId)
-                        .stream()))).toList();
+                .map(dao -> GardeningAreaMapper.daoToModel(dao,
+                        AreaBoundariesMapper.daoToModel(boundaries.get(dao.areaId).stream()),
+                        GardeningAreaOwnerMapper.daoToModel(ownerAreas.get(dao.areaId).stream())))
+                .toList();
         return gardeningAreas.stream();
     }
 
     @Override
     @Transactional("transactionManagerPostgres")
-    public Stream<GardeningArea> fetchAll() {
-        var boundaries = StreamSupport.stream(areaRepository.findAll().spliterator(), false)
-                .collect(Collectors.groupingBy(o -> o.areaId));
+    public Stream<GardeningArea> fetchAll(Ownership owners) {
+        if (owners.isSystem()) {
+            var boundaries = StreamSupport.stream(areaRepository.findAll().spliterator(), false)
+                    .collect(Collectors.groupingBy(o -> o.areaId));
 
-        var gardeningAreas = StreamSupport.stream(gardeningAreaRepository.findAllByDeletedFalse().spliterator(), false)
-                .map(dao -> GardeningAreaMapper.daoToModel(dao, AreaBoundariesMapper.daoToModel(boundaries.get(dao.areaId)
-                        .stream()))).toList();
-        return gardeningAreas.stream();
+            var gardeningAreas = StreamSupport.stream(gardeningAreaRepository.findAllByDeletedFalse()
+                            .spliterator(), false)
+                    .map(dao -> GardeningAreaMapper.daoToModel(dao, AreaBoundariesMapper.daoToModel(boundaries.get(dao.areaId)
+                            .stream()), GardeningAreaOwnerMapper.daoToModel(Stream.empty())))
+                    .toList();
+            return gardeningAreas.stream();
+        } else {
+            var ownerAreas = areaOwnerRepositoryPostgres.findAllByDomainIdIn(owners.value()
+                            .stream()
+                            .map(DomainId::value)
+                            .map(UUID::toString)
+                            .collect(Collectors.toList()))
+                    .collect(Collectors.groupingBy(o -> o.areaId));
+
+            var ownerAreaIds = ownerAreas.keySet();
+
+            var boundaries = StreamSupport.stream(areaRepository.findAll().spliterator(), false)
+                    .collect(Collectors.groupingBy(o -> o.areaId));
+
+            var gardeningAreas = StreamSupport.stream(gardeningAreaRepository.findAllByDeletedFalseAndAreaIdIn(ownerAreaIds)
+                            .spliterator(), false)
+                    .map(dao -> GardeningAreaMapper.daoToModel(dao, AreaBoundariesMapper.daoToModel(boundaries.get(dao.areaId)
+                            .stream()), GardeningAreaOwnerMapper.daoToModel(ownerAreas.get(dao.areaId).stream())))
+                    .toList();
+            return gardeningAreas.stream();
+        }
     }
 
     @Override
@@ -78,6 +110,9 @@ public class GardenRepositoryImpl implements GardenRepository {
 
         var boundariesDao = AreaBoundariesMapper.modelToDao(garden.area(), garden.id());
         areaRepository.saveAll(boundariesDao.collect(Collectors.toList()));
+
+        var ownersDao = GardeningAreaOwnerMapper.modelToDao(garden.owners().value().stream(), garden.id());
+        areaOwnerRepositoryPostgres.saveAll(ownersDao.collect(Collectors.toList()));
 
         return garden;
     }
